--- a/index.html
+++ b/index.html
@@ -1,228 +1,394 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Driver Preventiva</title>
+<meta charset="UTF-8">
+<title>Resumo da Corrida – RF Driver</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="stylesheet" href="./theme/theme.css">
+<link rel="stylesheet" href="./theme/layout.css">
+<link rel="stylesheet" href="./theme/components.css">
+
 <style>
-  body { font-family: Arial, sans-serif; background-color: #f0fff0; margin: 0; padding: 0; }
-  header { background-color: #006400; color: white; padding: 20px; text-align: center; }
-  h1 { margin: 0; }
-  main { padding: 20px; }
-  section { margin-bottom: 40px; }
-  label, select, input[type="number"], input[type="text"] { margin-right: 10px; margin-bottom: 10px; }
-  table { width: 100%; border-collapse: collapse; margin-top: 10px; }
-  th, td { border: 1px solid #999; padding: 8px; text-align: center; }
-  th { background-color: #c5e1a5; }
-  .summary-card { background-color: #e8f5e9; padding: 15px; border-radius: 8px; margin-bottom: 10px; }
-  .btn { background-color: #388e3c; color: white; border: none; padding: 10px 15px; cursor: pointer; border-radius: 5px; }
-  .btn:hover { background-color: #2e7d32; }
-  .flex { display: flex; gap: 10px; flex-wrap: wrap; }
-  .whatsapp-btn { background-color: #25d366; color: white; padding: 10px 20px; text-align: center; display: inline-block; border-radius: 5px; text-decoration: none; margin-top: 15px; }
-  .manutencao-table input[type="number"] { width: 100px; }
-  .manutencao-table td.readonly { background-color: #f0f0f0; }
+body{
+  background:linear-gradient(180deg,#fafafa,#f1f1f1);
+  color:#222;
+}
 
-  .config-item { margin-bottom: 15px; }
-  .config-item label { display: block; font-weight: bold; margin-bottom: 5px; }
-  .config-item input, .config-item select {
-    width: 100%; max-width: 300px; padding: 6px; border-radius: 5px; border: 1px solid #999;
-  }
+.page{
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  padding:18px;
+}
 
-  /* Estilo da tabela de próximas trocas */
-  #tabelaProximasTrocas th { background-color: #a5d6a7; }
-  #tabelaProximasTrocas td { font-weight: bold; }
-  .verde { color: green; }
-  .amarelo { color: orange; }
-  .vermelho { color: red; }
+.container{
+  width:100%;
+  max-width:420px;
+  display:flex;
+  flex-direction:column;
+  gap:16px;
+}
+
+/* HEADER */
+.header{
+  text-align:center;
+  padding:20px;
+  border-radius:22px;
+  background:#fff;
+  box-shadow:0 8px 24px rgba(0,0,0,.08);
+}
+
+.header h1{
+  font-size:1.15rem;
+  letter-spacing:1px;
+  color:#d4af37;
+  font-weight:800;
+}
+
+.header span{
+  font-size:.75rem;
+  color:#666;
+}
+
+/* ROTA */
+.route{
+  background:#fff;
+  border-radius:20px;
+  padding:18px;
+  box-shadow:0 6px 18px rgba(0,0,0,.06);
+}
+
+.route .item{
+  text-align:center;
+  font-weight:700;
+}
+
+.route .arrow{
+  text-align:center;
+  color:#d4af37;
+  font-size:1.3rem;
+}
+
+/* BLOCOS */
+.block{
+  background:#fff;
+  border-radius:18px;
+  padding:16px;
+  box-shadow:0 6px 18px rgba(0,0,0,.06);
+}
+
+label{
+  font-size:.8rem;
+  font-weight:700;
+  display:block;
+  margin-bottom:6px;
+}
+
+/* INPUTS */
+select,
+input[type="number"]{
+  width:100%;
+  padding:12px;
+  border-radius:14px;
+  border:1px solid #ccc;
+  background:#fff;
+  color:#000;
+  font-size:.95rem;
+}
+
+input::placeholder{ color:#777; }
+
+/* OPÇÕES */
+.option{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:12px;
+  border-radius:14px;
+  border:1px solid #eee;
+  margin-bottom:8px;
+  transition:.25s;
+}
+
+.option.active{
+  background:rgba(212,175,55,.10);
+  border-color:#d4af37;
+}
+
+/* DETALHAMENTO */
+.details{
+  font-size:.85rem;
+}
+
+.details div{
+  display:flex;
+  justify-content:space-between;
+  margin-bottom:6px;
+}
+
+/* TOTAL */
+.totalBox{
+  text-align:center;
+  padding:22px;
+  border-radius:22px;
+  background:#fff;
+  box-shadow:0 10px 26px rgba(0,0,0,.1);
+  position:relative;
+}
+
+.badge{
+  position:absolute;
+  top:-10px;
+  right:12px;
+  background:linear-gradient(180deg,#e6c97a,#d4af37);
+  color:#000;
+  font-size:.65rem;
+  padding:6px 10px;
+  border-radius:12px;
+  font-weight:700;
+}
+
+.totalLabel{
+  font-size:.7rem;
+  color:#777;
+}
+
+.total{
+  font-size:2.3rem;
+  font-weight:800;
+  color:#d4af37;
+  animation:totalPulse .35s ease;
+}
+
+@keyframes totalPulse{
+  from{opacity:.4;transform:scale(1.08)}
+  to{opacity:1;transform:scale(1)}
+}
+
+/* BOTÃO */
+.btn-final{
+  padding:16px;
+  border-radius:18px;
+  border:none;
+  background:linear-gradient(180deg,#e6c97a,#d4af37);
+  font-size:1rem;
+  font-weight:800;
+  color:#000;
+}
 </style>
 </head>
+
 <body>
-<header>
-  <h1>Driver Preventiva</h1>
-</header>
-<main>
-<section>
-  <h2>⚙️ Configurações Iniciais</h2>
 
-  <div class="config-item">
-    <label for="marca">Marca:</label><br>
-    <select id="marca" onchange="atualizarModelos()"></select>
+<div class="page">
+<div class="container">
+
+  <!-- HEADER -->
+  <div class="header">
+    <h1>RF Driver – Orçamento de viagem</h1>
+    <span>Tabela oficial</span>
   </div>
 
-  <div class="config-item">
-    <label for="modelo">Modelo:</label><br>
-    <select id="modelo"></select>
+  <!-- ROTA -->
+  <div class="route">
+    <div class="item">📌 <strong>Origem</strong><br><span id="origemTxt"></span></div>
+    <div class="arrow">⬇</div>
+    <div class="item">🏁 <strong>Destino</strong><br><span id="destinoTxt"></span></div>
   </div>
 
-  <div class="config-item">
-    <label for="kmAtual">KM Atual:</label><br>
-    <input type="number" id="kmAtual" placeholder="Digite o KM atual" oninput="mostrarProximasTrocas()">
+  <!-- TIPO DE VIAGEM (CORRIGIDO) -->
+  <div class="block">
+    <label>🚖 <strong>Tipo de viagem</strong></label>
+    <select id="tipoViagem">
+      <option value="ida">🚕 Ida</option>
+      <option value="bateVolta">♻️ Bate e volta</option>
+      <option value="idaVolta">🚕♻️ Ida e volta (até 1h)</option>
+      <option value="idaVoltaEspera">🚕♻️ Ida e volta (a partir de 1h)</option>
+    </select>
   </div>
 
-  <div id="proximasTrocas" class="summary-card"></div>
-</section>
+  <!-- TAXAS FIXAS -->
+  <div class="block">
+    <div class="option"><span>🛣️ <strong>Desvio de rota simples</strong></span><input type="checkbox" id="desvioSimples"></div>
+    <div class="option"><span>🏖️ <strong>Volta da praia</strong></span><input type="checkbox" id="voltaPraia"></div>
+    <div class="option"><span>🧺 <strong>Taxa de feira</strong></span><input type="checkbox" id="taxaFeira"></div>
+  </div>
 
-<section>
-  <h2>⚖️ Tabela de Manutenção Preventiva</h2>
-  <table class="manutencao-table" id="tabelaManutencao">
-    <thead>
-      <tr>
-        <th>Item</th>
-        <th>KM de Autonomia</th>
-        <th>Último KM de troca</th>
-        <th>Valor pago (R$)</th>
-        <th>KM previsto para nova troca</th>
-        <th>Custo por KM (R$)</th>
-      </tr>
-    </thead>
-    <tbody id="corpoTabela"></tbody>
-    <tfoot>
-      <tr>
-        <td colspan="5" style="text-align:right;font-weight:bold;">Total de custo por KM:</td>
-        <td id="custoTotalKm">R$ 0.00000</td>
-      </tr>
-    </tfoot>
-  </table>
-</section>
-</main>
+  <!-- DESVIO MANUAL -->
+  <div class="block">
+    <div class="option"><span>🛣️ <strong>Desvio de rota (manual)</strong></span><input type="checkbox" id="desvioManual"></div>
+    <input type="number" id="valorDesvioManual" placeholder="Informe o valor do desvio" style="display:none;margin-top:8px">
+  </div>
+
+  <!-- ANIMAL -->
+  <div class="block">
+    <label>🐶 <strong>Transporte de animal</strong></label>
+    <select id="animal">
+      <option value="0">Não</option>
+      <option value="5">Pequeno – R$ 5</option>
+      <option value="7">Médio – R$ 7</option>
+      <option value="10">Grande – R$ 10</option>
+      <option value="20">Viagem longa – R$ 20</option>
+    </select>
+  </div>
+
+  <!-- ESPERA -->
+  <div class="block">
+    <label>⏱️ <strong>Tempo de espera (min)</strong></label>
+    <input type="number" id="minutosEspera" placeholder="Ex: 10">
+  </div>
+
+  <!-- DETALHAMENTO -->
+  <div class="block">
+    <strong>Detalhamento</strong>
+    <div class="details" id="detalhamento"></div>
+  </div>
+
+  <!-- TOTAL -->
+  <div class="totalBox">
+    <div class="badge">OFICIAL</div>
+    <div class="totalLabel">💰 Total</div>
+    <div id="total" class="total">R$ 0,00</div>
+  </div>
+
+  <!-- BOTÃO -->
+  <button class="btn-final" onclick="enviarWhats()">Enviar no WhatsApp</button>
+
+</div>
+</div>
+
+<script src="core/global.js"></script>
+<script src="core/taxas.js?v=4"></script>
+<script src="core/dinamico.js?v=4"></script>
 
 <script>
-const marcasModelos = {
-  FIAT: ["Argo 1.0 3 cilindros", "Argo 1.3", "Cronos 1.0 3 cilindros", "Cronos 1.3", "Cronos", "Doblô 1.4", "Doblô 1.8", "Mobi 1.0 3 cilindros", "Mobi 1.0 4 cilindros", "Pálio celebration", "Pálio attractive", "Pálio sporting 1.8", "Pálio EL", "Pálio 1.4", "Pálio 1.6", "Pálio weekend 1.4", "Pálio weekend 1.8", "Punto 1.0", "Punto 1.4", "Punto 1.6", "Punto 1.8", "Siena celebration", "Siena EL 1.0", "Siena EL 1.4", "Siena ELX 1.0", "Siena ELX 1.4", "Siena ELX 1.8", "Siena 1.6", "Uno 1.0 3 cilindros", "Uno 1.0", "Uno 1.4"],
-  CHEVROLET: ["Agile 1.0", "Agile 1.4", "Classic", "Corsa 1.0", "Corsa 1.4", "Corsa 1.8", "Cobalt 1.4", "Cobalt 1.8", "Spin 1.8", "Prisma 1.0", "Prisma 1.4", "Onix 1.0", "Onix 1.4", "Onix joy", "Onix Plus joy", "Onix hatch 3 cilindros", "Onix Plus 3 cilindros"],
-  VOLKSWAGEN: ["Gol 3 cilindros", "Gol 1.0", "Gol 1.6", "Fox 3 cilindros", "Fox 1.0", "Fox 1.6", "Spacefox 1.6", "CrossFox 3 cilindros", "CrossFox 1.0", "CrossFox 1.6", "Space cross", "Voyage 3 cilindros", "Voyage", "Voyage 1.6", "Up 3 cilindros", "Up 1.0", "Up 1.6"],
-  FORD: ["Ecosport 1.6", "Ecosport 2.0", "Fiesta 1.0", "Fiesta 1.6", "Focus hatch 1.6", "Focus hatch 2.0", "Focus sedan 1.6", "Focus sedan 2.0", "New fiesta 1.0", "New fiesta 1.6", "New fiesta sedan 1.6", "Ford Ka 3 cilindros", "Ford Ka 1.0", "Ford Ka 1.5", "Ka+ 3 cilindros", "Ka+ 1.0", "Ka+ 1.5"],
-  HONDA: ["Fit 1.5", "Fit 1.6", "Civic 1.6", "Civic 2.0", "City 1.6", "City 1.7"],
-  HYUNDAI: ["HB20 3 cilindros", "HB20 hatch 1.0", "HB20 hatch 1.6", "HB20S 3 cilindros", "HB20S 1.0", "HB20S 1.6", "Creta 1.0 turbo", "Creta 1.6", "Creta 2.0", "Tucson 1.6", "Tucson 2.0"],
-  RENAULT: ["Kwid 3 cilindros", "Symbol 1.0", "Symbol 1.6", "Sandero 3 cilindros", "Sandero 1.0", "Sandero 1.6", "Logan 3 cilindros", "Logan 1.0", "Logan 1.6", "Duster 1.6", "Duster 2.0", "Megane perua", "Megane sedan", "Kardian"],
-  TOYOTA: ["Etios Hatch 1.0", "Etios Hatch 1.5", "Etios sedan 1.0", "Etios sedan 1.5", "Corolla 1.8", "Corolla 2.0", "Yaris 1.0", "Yaris 1.6"],
-  NISSAN: ["March 3 cilindros", "March 1.0", "March 1.6", "Versa 3 cilindros", "Versa 1.0", "Versa 1.6", "Sentra 1.6", "Sentra 2.0", "Kicks 1.6"],
-  OUTROS: ["Modelo genérico"]
-};
+const origem = App.get("origem");
+const destino = App.get("destino");
+const valorBase = Number(App.get("valorBase") || 0);
 
-const itensManutencao = [
-  ["Cabo de vela", 80000], ["Bobina de ignição", 100000], ["Vela Normal", 40000], ["Bobina independente", 200000],
-  ["Velas Dirídio", 100000], ["Filtro de Ar", 15000], ["Filtro de combustível", 10000], ["Filtro de Cabine", 10000],
-  ["Filtro de óleo", 10000], ["Filtro câmbio automático", 80000], ["Óleo do motor", 10000], ["Óleo da caixa de marcha Manual", 100000],
-  ["Óleo da caixa de marcha automática", 80000], ["Sistema de Arrefecimento", 60000], ["Limpeza de Bico", 35000],
-  ["Correia Dentada", 50000], ["Corrente de Comando", 150000], ["Correia banhada", 180000], ["Correia do alternador", 50000],
-  ["Rolamento de correia dentada", 50000], ["Tensor", 50000], ["Rolamento esticador", 100000], ["PNEUS", 50000]
-];
+document.getElementById("origemTxt").innerText = origem;
+document.getElementById("destinoTxt").innerText = destino;
 
-function atualizarModelos() {
-  const marca = document.getElementById("marca").value;
-  const modelos = marcasModelos[marca];
-  const modeloSelect = document.getElementById("modelo");
-  modeloSelect.innerHTML = modelos.map(m => `<option value="${m}">${m}</option>`).join('');
-}
+const tipoViagem = document.getElementById("tipoViagem");
+const desvioSimples = document.getElementById("desvioSimples");
+const voltaPraia = document.getElementById("voltaPraia");
+const taxaFeira = document.getElementById("taxaFeira");
+const desvioManual = document.getElementById("desvioManual");
+const valorDesvioManual = document.getElementById("valorDesvioManual");
+const animalSel = document.getElementById("animal");
+const minutosEspera = document.getElementById("minutosEspera");
+const detalheDiv = document.getElementById("detalhamento");
+const totalDiv = document.getElementById("total");
 
-window.onload = () => {
-  const marcaSelect = document.getElementById("marca");
-  Object.keys(marcasModelos).forEach(m => {
-    marcaSelect.innerHTML += `<option value="${m}">${m}</option>`;
-  });
-  atualizarModelos();
+let detalhesWhats = [];
 
-  const corpo = document.getElementById("corpoTabela");
-  itensManutencao.forEach(([item, autonomia]) => {
-    corpo.innerHTML += `
-      <tr>
-        <td>${item}</td>
-        <td>${autonomia > 0 ? autonomia + ' KM' : '-'}</td>
-        <td><input type="number" onchange="calcularLinha(this); mostrarProximasTrocas();" /></td>
-        <td><input type="number" onchange="calcularLinha(this); mostrarProximasTrocas();" /></td>
-        <td class="readonly"></td>
-        <td class="readonly"></td>
-      </tr>
-    `;
-  });
-};
+desvioManual.addEventListener("change",()=>{
+  valorDesvioManual.style.display = desvioManual.checked ? "block" : "none";
+});
 
-function calcularLinha(el) {
-  const linha = el.parentElement.parentElement;
-  const autonomiaText = linha.children[1].textContent;
-  const autonomia = parseInt(autonomiaText) || 0;
-  const kmTroca = parseFloat(linha.children[2].children[0].value) || 0;
-  const valorPago = parseFloat(linha.children[3].children[0].value) || 0;
+function calcular(){
+  let total = valorBase;
+  let detalhes = [];
+  detalhesWhats = [];
 
-  if (autonomia > 0 && kmTroca > 0) {
-    linha.children[4].textContent = kmTroca + autonomia;
-    linha.children[5].textContent = `R$ ${(valorPago / autonomia).toFixed(5)}`;
-  } else {
-    linha.children[4].textContent = "";
-    linha.children[5].textContent = "";
+  detalhes.push(["🚖 Viagem base", valorBase]);
+  detalhesWhats.push(`🚖 *Viagem base*: R$ ${valorBase.toFixed(2)}`);
+
+  if(Dinamico.ativo){
+    const acres = valorBase * (Dinamico.multiplicador - 1);
+    total += acres;
+    detalhes.push([`⚡ Tarifa dinâmica (${Dinamico.multiplicador}x)`, acres]);
+    detalhesWhats.push(`⚡ *Tarifa dinâmica*: +R$ ${acres.toFixed(2)}`);
   }
 
-  calcularTotais();
-}
+  if(tipoViagem.value !== "ida"){
+    const acres = valorBase * Taxas.tipoViagem[tipoViagem.value];
+    total += acres;
+    detalhes.push(["♻️ Tipo de viagem", acres]);
+    detalhesWhats.push(`♻️ *Tipo de viagem*: +R$ ${acres.toFixed(2)}`);
+  }
 
-function calcularTotais() {
-  let custoTotal = 0;
-  const linhas = document.querySelectorAll("#corpoTabela tr");
-  linhas.forEach(linha => {
-    const custoKM = linha.children[5].textContent.replace("R$ ", "");
-    const custo = parseFloat(custoKM);
-    if (!isNaN(custo)) custoTotal += custo;
-  });
-  custoTotal = parseFloat(custoTotal.toFixed(5));
-  document.getElementById("custoTotalKm").textContent = `R$ ${custoTotal.toFixed(5)}`;
-}
+  if(desvioSimples.checked){
+    total += Taxas.desvioRotaSimples;
+    detalhes.push(["🛣️ Desvio simples", Taxas.desvioRotaSimples]);
+    detalhesWhats.push("🛣️ *Desvio simples*: +R$ 5,00");
+  }
 
-function mostrarProximasTrocas() {
-  const kmAtual = parseFloat(document.getElementById("kmAtual").value) || 0;
-  const linhas = document.querySelectorAll("#corpoTabela tr");
-  let proximas = [];
+  if(voltaPraia.checked){
+    total += Taxas.voltaPraia;
+    detalhes.push(["🏖️ Volta da praia", Taxas.voltaPraia]);
+    detalhesWhats.push("🏖️ *Volta da praia*: +R$ 10,00");
+  }
 
-  linhas.forEach(linha => {
-    const item = linha.children[0].textContent;
-    const autonomiaText = linha.children[1].textContent;
-    const autonomia = parseInt(autonomiaText) || 0;
-    const ultimoKm = parseFloat(linha.children[2].children[0].value);
+  if(taxaFeira.checked){
+    total += Taxas.feira;
+    detalhes.push(["🧺 Taxa de feira", Taxas.feira]);
+    detalhesWhats.push("🧺 *Taxa de feira*: +R$ 5,00");
+  }
 
-    if (!isNaN(ultimoKm) && ultimoKm > 0 && autonomia > 0) {
-      const proximaTroca = ultimoKm + autonomia;
-      let kmRestante = proximaTroca - kmAtual;
-      const sinal = kmRestante >= 0 ? "+" : "-";
-      kmRestante = Math.abs(kmRestante);
-
-      let classe = "";
-      if (sinal === "+" && kmRestante > 1000) classe = "verde";
-      else if (sinal === "+" && kmRestante <= 1000) classe = "amarelo";
-      else if (sinal === "-") classe = "vermelho";
-
-      proximas.push({ item, proximaTroca, kmRestante, sinal, classe });
+  if(desvioManual.checked){
+    const v = Number(valorDesvioManual.value || 0);
+    if(v>0){
+      total += v;
+      detalhes.push(["🛣️ Desvio manual", v]);
+      detalhesWhats.push(`🛣️ *Desvio manual*: +R$ ${v.toFixed(2)}`);
     }
-  });
-
-  proximas.sort((a, b) => a.kmRestante - b.kmRestante);
-
-  if (proximas.length === 0) {
-    document.getElementById("proximasTrocas").innerHTML = "<p>⚠ Nenhum item com 'Último KM' preenchido.</p>";
-    return;
   }
 
-  let html = `<table id="tabelaProximasTrocas">
-    <thead>
-      <tr>
-        <th>Descrição</th>
-        <th>Próxima Troca (KM)</th>
-        <th>KM Restante</th>
-      </tr>
-    </thead>
-    <tbody>`;
+  const animal = Number(animalSel.value||0);
+  if(animal>0){
+    total += animal;
+    detalhes.push(["🐶 Transporte animal", animal]);
+    detalhesWhats.push(`🐶 *Transporte animal*: +R$ ${animal.toFixed(2)}`);
+  }
 
-  proximas.forEach(p => {
-    html += `<tr class="${p.classe}">
-      <td>${p.item}</td>
-      <td>${p.proximaTroca} KM</td>
-      <td>${p.sinal}${p.kmRestante} KM</td>
-    </tr>`;
+  const min = Number(minutosEspera.value||0);
+  if(min>=Taxas.espera.blocoMinutos){
+    const acres = Math.floor(min/Taxas.espera.blocoMinutos)*Taxas.espera.valorPorBloco;
+    total += acres;
+    detalhes.push([`⏱️ Tempo de espera (${min} min)`, acres]);
+    detalhesWhats.push(`⏱️ *Tempo de espera*: +R$ ${acres.toFixed(2)}`);
+  }
+
+  detalheDiv.innerHTML = detalhes.map(d=>`
+    <div>
+      <span><strong>${d[0]}</strong></span>
+      <strong>R$ ${d[1].toFixed(2)}</strong>
+    </div>
+  `).join("");
+
+  totalDiv.innerText = `R$ ${total.toFixed(2)}`;
+  App.set("total", total);
+}
+
+document.querySelectorAll("select,input").forEach(el=>{
+  el.addEventListener("change",()=>{
+    el.closest(".option")?.classList.toggle("active",el.checked);
+    totalDiv.classList.remove("total");
+    void totalDiv.offsetWidth;
+    totalDiv.classList.add("total");
+    calcular();
   });
+});
 
-  html += "</tbody></table>";
+calcular();
 
-  document.getElementById("proximasTrocas").innerHTML = html;
+function enviarWhats(){
+  const msg =
+`🚖 *RF Driver – Orçamento de viagem*
+
+📌 *Origem*: ${origem}
+🏁 *Destino*: ${destino}
+
+*Detalhamento*
+${detalhesWhats.join("\n")}
+
+💰 *Total*: R$ ${App.get("total").toFixed(2)}`;
+
+  window.open("https://wa.me/?text="+encodeURIComponent(msg),"_blank");
 }
 </script>
+
 </body>
 </html>
