--- a/index.html
+++ b/index.html
@@ -2,179 +2,163 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Resumo da Corrida – RF Driver</title>
+<title>RF Driver – Mobilidade com excelência</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- PWA -->
+<link rel="manifest" href="./manifest.json">
+<meta name="theme-color" content="#D4AF37">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="RF Driver">
+<link rel="apple-touch-icon" href="./icons/192.png">
 
 <link rel="stylesheet" href="./theme/theme.css">
 <link rel="stylesheet" href="./theme/layout.css">
 <link rel="stylesheet" href="./theme/components.css">
 
 <style>
-body{
-  background:linear-gradient(180deg,#fafafa,#f1f1f1);
-  color:#222;
+/* ================== PALETA RF DRIVER ================== */
+:root{
+  --gold:#D4AF37;
+  --gold-soft:#E6C97A;
+  --bg:#F5F5F5;
+  --text:#444;
+  --dark:#111;
 }
 
+/* ================== ANIMAÇÕES ================== */
+@keyframes fadeUp{
+  from{opacity:0;transform:translateY(18px)}
+  to{opacity:1;transform:translateY(0)}
+}
+
+@keyframes shine{
+  0%{background-position:-200%}
+  100%{background-position:200%}
+}
+
+@keyframes pulseGlow{
+  0%,100%{box-shadow:0 0 0 rgba(212,175,55,0)}
+  50%{box-shadow:0 0 28px rgba(212,175,55,.45)}
+}
+
+/* ================== BASE ================== */
+body{
+  background:
+    radial-gradient(
+      circle at top,
+      #ffffff 0%,
+      #f2f2f2 60%,
+      #eaeaea 100%
+    );
+  color:var(--text);
+}
+
+/* ================== LAYOUT ================== */
 .page{
   min-height:100vh;
   display:flex;
+  align-items:center;
   justify-content:center;
-  padding:18px;
+  padding:22px;
 }
 
-.container{
+.box{
   width:100%;
   max-width:420px;
   display:flex;
   flex-direction:column;
-  gap:16px;
+  gap:22px;
 }
 
-/* HEADER */
-.header{
+/* ================== HERO ================== */
+.hero{
   text-align:center;
-  padding:20px;
-  border-radius:22px;
-  background:#fff;
-  box-shadow:0 8px 24px rgba(0,0,0,.08);
+  padding:34px 26px;
+  border-radius:26px;
+  background:
+    linear-gradient(
+      180deg,
+      #ffffff,
+      #f3f3f3
+    );
+  border:1px solid rgba(212,175,55,.35);
+  box-shadow:
+    0 12px 30px rgba(0,0,0,.08),
+    inset 0 0 20px rgba(255,255,255,.7);
+  animation:fadeUp .7s ease;
 }
 
-.header h1{
-  font-size:1.15rem;
-  letter-spacing:1px;
-  color:#d4af37;
+.hero-title{
+  font-size:1.85rem;
   font-weight:800;
+  letter-spacing:2px;
+  background:linear-gradient(
+    120deg,
+    var(--gold),
+    var(--gold-soft),
+    var(--gold)
+  );
+  background-size:200% auto;
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  animation:shine 6s linear infinite;
 }
 
-.header span{
-  font-size:.75rem;
+.hero-sub{
+  margin-top:6px;
+  font-size:.9rem;
   color:#666;
 }
 
-/* ROTA */
-.route{
-  background:#fff;
-  border-radius:20px;
-  padding:18px;
-  box-shadow:0 6px 18px rgba(0,0,0,.06);
-}
-
-.route .item{
-  text-align:center;
-  font-weight:700;
-}
-
-.route .arrow{
-  text-align:center;
-  color:#d4af37;
-  font-size:1.3rem;
-}
-
-/* BLOCOS */
-.block{
-  background:#fff;
-  border-radius:18px;
-  padding:16px;
-  box-shadow:0 6px 18px rgba(0,0,0,.06);
-}
-
-label{
-  font-size:.8rem;
-  font-weight:700;
-  display:block;
-  margin-bottom:6px;
-}
-
-/* INPUTS */
-select,
-input[type="number"]{
-  width:100%;
-  padding:12px;
-  border-radius:14px;
-  border:1px solid #ccc;
-  background:#fff;
-  color:#000;
-  font-size:.95rem;
-}
-
-input::placeholder{ color:#777; }
-
-/* OPÇÕES */
-.option{
+/* ================== SELO CONFIANÇA ================== */
+.trust{
+  margin-top:14px;
+  font-size:.75rem;
+  color:#777;
   display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:12px;
-  border-radius:14px;
-  border:1px solid #eee;
-  margin-bottom:8px;
+  justify-content:center;
+  gap:10px;
+}
+
+/* ================== BOTÃO PRINCIPAL ================== */
+.primary-action{
+  padding:18px;
+  font-size:1.05rem;
+  font-weight:700;
+  border-radius:18px;
+  background:linear-gradient(180deg,var(--gold-soft),var(--gold));
+  color:#000;
+  border:none;
+  box-shadow:0 10px 20px rgba(212,175,55,.35);
+  animation:fadeUp .9s ease, pulseGlow 3s ease infinite;
   transition:.25s;
 }
 
-.option.active{
-  background:rgba(212,175,55,.10);
-  border-color:#d4af37;
+.primary-action:active{
+  transform:scale(.97);
+  box-shadow:0 6px 14px rgba(212,175,55,.35);
 }
 
-/* DETALHAMENTO */
-.details{
-  font-size:.85rem;
-}
-
-.details div{
+/* ================== AÇÕES SECUNDÁRIAS ================== */
+.secondary{
   display:flex;
-  justify-content:space-between;
-  margin-bottom:6px;
+  gap:12px;
+  animation:fadeUp 1.1s ease;
 }
 
-/* TOTAL */
-.totalBox{
+.secondary .btn{
+  flex:1;
+}
+
+/* ================== FOOTER ================== */
+.footer{
   text-align:center;
-  padding:22px;
-  border-radius:22px;
-  background:#fff;
-  box-shadow:0 10px 26px rgba(0,0,0,.1);
-  position:relative;
-}
-
-.badge{
-  position:absolute;
-  top:-10px;
-  right:12px;
-  background:linear-gradient(180deg,#e6c97a,#d4af37);
-  color:#000;
-  font-size:.65rem;
-  padding:6px 10px;
-  border-radius:12px;
-  font-weight:700;
-}
-
-.totalLabel{
-  font-size:.7rem;
+  font-size:.75rem;
   color:#777;
-}
-
-.total{
-  font-size:2.3rem;
-  font-weight:800;
-  color:#d4af37;
-  animation:totalPulse .35s ease;
-}
-
-@keyframes totalPulse{
-  from{opacity:.4;transform:scale(1.08)}
-  to{opacity:1;transform:scale(1)}
-}
-
-/* BOTÃO */
-.btn-final{
-  padding:16px;
-  border-radius:18px;
-  border:none;
-  background:linear-gradient(180deg,#e6c97a,#d4af37);
-  font-size:1rem;
-  font-weight:800;
-  color:#000;
+  animation:fadeUp 1.3s ease;
 }
 </style>
 </head>
@@ -182,211 +166,54 @@ input::placeholder{ color:#777; }
 <body>
 
 <div class="page">
-<div class="container">
+  <div class="box">
 
-  <!-- HEADER -->
-  <div class="header">
-    <h1>RF Driver – Orçamento de viagem</h1>
-    <span>Tabela oficial</span>
+    <!-- HERO -->
+    <div class="hero">
+      <div class="hero-title">RF DRIVER</div>
+      <div class="hero-sub">Mobilidade com excelência</div>
+
+      <div class="trust">
+        <span>🔒 Seguro</span>
+        <span>•</span>
+        <span>⭐ Profissional</span>
+        <span>•</span>
+        <span>🚗 Confiável</span>
+      </div>
+    </div>
+
+    <!-- AÇÃO PRINCIPAL -->
+    <button class="btn primary-action" id="btnIniciar">
+      ▶ Iniciar cálculo de corrida
+    </button>
+
+    <!-- AÇÕES SECUNDÁRIAS -->
+    <div class="secondary">
+      <button class="btn btn-outline" onclick="abrirRegras()">
+        📋 Regras
+      </button>
+      <a class="btn btn-outline" href="instalar-app.html">
+        📲 Instalar App
+      </a>
+    </div>
+
+    <!-- FOOTER -->
+    <div class="footer">
+      Ferramenta oficial para motoristas RF Driver
+    </div>
+
   </div>
-
-  <!-- ROTA -->
-  <div class="route">
-    <div class="item">📌 <strong>Origem</strong><br><span id="origemTxt"></span></div>
-    <div class="arrow">⬇</div>
-    <div class="item">🏁 <strong>Destino</strong><br><span id="destinoTxt"></span></div>
-  </div>
-
-  <!-- TIPO DE VIAGEM (CORRIGIDO) -->
-  <div class="block">
-    <label>🚖 <strong>Tipo de viagem</strong></label>
-    <select id="tipoViagem">
-      <option value="ida">🚕 Ida</option>
-      <option value="bateVolta">♻️ Bate e volta</option>
-      <option value="idaVolta">🚕♻️ Ida e volta (até 1h)</option>
-      <option value="idaVoltaEspera">🚕♻️ Ida e volta (a partir de 1h)</option>
-    </select>
-  </div>
-
-  <!-- TAXAS FIXAS -->
-  <div class="block">
-    <div class="option"><span>🛣️ <strong>Desvio de rota simples</strong></span><input type="checkbox" id="desvioSimples"></div>
-    <div class="option"><span>🏖️ <strong>Volta da praia</strong></span><input type="checkbox" id="voltaPraia"></div>
-    <div class="option"><span>🧺 <strong>Taxa de feira</strong></span><input type="checkbox" id="taxaFeira"></div>
-  </div>
-
-  <!-- DESVIO MANUAL -->
-  <div class="block">
-    <div class="option"><span>🛣️ <strong>Desvio de rota (manual)</strong></span><input type="checkbox" id="desvioManual"></div>
-    <input type="number" id="valorDesvioManual" placeholder="Informe o valor do desvio" style="display:none;margin-top:8px">
-  </div>
-
-  <!-- ANIMAL -->
-  <div class="block">
-    <label>🐶 <strong>Transporte de animal</strong></label>
-    <select id="animal">
-      <option value="0">Não</option>
-      <option value="5">Pequeno – R$ 5</option>
-      <option value="7">Médio – R$ 7</option>
-      <option value="10">Grande – R$ 10</option>
-      <option value="20">Viagem longa – R$ 20</option>
-    </select>
-  </div>
-
-  <!-- ESPERA -->
-  <div class="block">
-    <label>⏱️ <strong>Tempo de espera (min)</strong></label>
-    <input type="number" id="minutosEspera" placeholder="Ex: 10">
-  </div>
-
-  <!-- DETALHAMENTO -->
-  <div class="block">
-    <strong>Detalhamento</strong>
-    <div class="details" id="detalhamento"></div>
-  </div>
-
-  <!-- TOTAL -->
-  <div class="totalBox">
-    <div class="badge">OFICIAL</div>
-    <div class="totalLabel">💰 Total</div>
-    <div id="total" class="total">R$ 0,00</div>
-  </div>
-
-  <!-- BOTÃO -->
-  <button class="btn-final" onclick="enviarWhats()">Enviar no WhatsApp</button>
-
-</div>
 </div>
 
 <script src="core/global.js"></script>
-<script src="core/taxas.js?v=4"></script>
-<script src="core/dinamico.js?v=4"></script>
-
 <script>
-const origem = App.get("origem");
-const destino = App.get("destino");
-const valorBase = Number(App.get("valorBase") || 0);
+document.getElementById("btnIniciar").onclick = () => {
+  App.reset();
+  App.go("origem.html");
+};
 
-document.getElementById("origemTxt").innerText = origem;
-document.getElementById("destinoTxt").innerText = destino;
-
-const tipoViagem = document.getElementById("tipoViagem");
-const desvioSimples = document.getElementById("desvioSimples");
-const voltaPraia = document.getElementById("voltaPraia");
-const taxaFeira = document.getElementById("taxaFeira");
-const desvioManual = document.getElementById("desvioManual");
-const valorDesvioManual = document.getElementById("valorDesvioManual");
-const animalSel = document.getElementById("animal");
-const minutosEspera = document.getElementById("minutosEspera");
-const detalheDiv = document.getElementById("detalhamento");
-const totalDiv = document.getElementById("total");
-
-let detalhesWhats = [];
-
-desvioManual.addEventListener("change",()=>{
-  valorDesvioManual.style.display = desvioManual.checked ? "block" : "none";
-});
-
-function calcular(){
-  let total = valorBase;
-  let detalhes = [];
-  detalhesWhats = [];
-
-  detalhes.push(["🚖 Viagem base", valorBase]);
-  detalhesWhats.push(`🚖 *Viagem base*: R$ ${valorBase.toFixed(2)}`);
-
-  if(Dinamico.ativo){
-    const acres = valorBase * (Dinamico.multiplicador - 1);
-    total += acres;
-    detalhes.push([`⚡ Tarifa dinâmica (${Dinamico.multiplicador}x)`, acres]);
-    detalhesWhats.push(`⚡ *Tarifa dinâmica*: +R$ ${acres.toFixed(2)}`);
-  }
-
-  if(tipoViagem.value !== "ida"){
-    const acres = valorBase * Taxas.tipoViagem[tipoViagem.value];
-    total += acres;
-    detalhes.push(["♻️ Tipo de viagem", acres]);
-    detalhesWhats.push(`♻️ *Tipo de viagem*: +R$ ${acres.toFixed(2)}`);
-  }
-
-  if(desvioSimples.checked){
-    total += Taxas.desvioRotaSimples;
-    detalhes.push(["🛣️ Desvio simples", Taxas.desvioRotaSimples]);
-    detalhesWhats.push("🛣️ *Desvio simples*: +R$ 5,00");
-  }
-
-  if(voltaPraia.checked){
-    total += Taxas.voltaPraia;
-    detalhes.push(["🏖️ Volta da praia", Taxas.voltaPraia]);
-    detalhesWhats.push("🏖️ *Volta da praia*: +R$ 10,00");
-  }
-
-  if(taxaFeira.checked){
-    total += Taxas.feira;
-    detalhes.push(["🧺 Taxa de feira", Taxas.feira]);
-    detalhesWhats.push("🧺 *Taxa de feira*: +R$ 5,00");
-  }
-
-  if(desvioManual.checked){
-    const v = Number(valorDesvioManual.value || 0);
-    if(v>0){
-      total += v;
-      detalhes.push(["🛣️ Desvio manual", v]);
-      detalhesWhats.push(`🛣️ *Desvio manual*: +R$ ${v.toFixed(2)}`);
-    }
-  }
-
-  const animal = Number(animalSel.value||0);
-  if(animal>0){
-    total += animal;
-    detalhes.push(["🐶 Transporte animal", animal]);
-    detalhesWhats.push(`🐶 *Transporte animal*: +R$ ${animal.toFixed(2)}`);
-  }
-
-  const min = Number(minutosEspera.value||0);
-  if(min>=Taxas.espera.blocoMinutos){
-    const acres = Math.floor(min/Taxas.espera.blocoMinutos)*Taxas.espera.valorPorBloco;
-    total += acres;
-    detalhes.push([`⏱️ Tempo de espera (${min} min)`, acres]);
-    detalhesWhats.push(`⏱️ *Tempo de espera*: +R$ ${acres.toFixed(2)}`);
-  }
-
-  detalheDiv.innerHTML = detalhes.map(d=>`
-    <div>
-      <span><strong>${d[0]}</strong></span>
-      <strong>R$ ${d[1].toFixed(2)}</strong>
-    </div>
-  `).join("");
-
-  totalDiv.innerText = `R$ ${total.toFixed(2)}`;
-  App.set("total", total);
-}
-
-document.querySelectorAll("select,input").forEach(el=>{
-  el.addEventListener("change",()=>{
-    el.closest(".option")?.classList.toggle("active",el.checked);
-    totalDiv.classList.remove("total");
-    void totalDiv.offsetWidth;
-    totalDiv.classList.add("total");
-    calcular();
-  });
-});
-
-calcular();
-
-function enviarWhats(){
-  const msg =
-`🚖 *RF Driver – Orçamento de viagem*
-
-📌 *Origem*: ${origem}
-🏁 *Destino*: ${destino}
-
-*Detalhamento*
-${detalhesWhats.join("\n")}
-
-💰 *Total*: R$ ${App.get("total").toFixed(2)}`;
-
-  window.open("https://wa.me/?text="+encodeURIComponent(msg),"_blank");
+function abrirRegras(){
+  App.go("regras.html");
 }
 </script>
 
