--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 <link rel="stylesheet" href="./theme/components.css">
 
 <style>
-/* ================== PALETA RF DRIVER ================== */
 :root{
   --gold:#D4AF37;
   --gold-soft:#E6C97A;
@@ -28,7 +27,6 @@
   --dark:#111;
 }
 
-/* ================== ANIMAÇÕES ================== */
 @keyframes fadeUp{
   from{opacity:0;transform:translateY(18px)}
   to{opacity:1;transform:translateY(0)}
@@ -44,19 +42,12 @@
   50%{box-shadow:0 0 28px rgba(212,175,55,.45)}
 }
 
-/* ================== BASE ================== */
 body{
   background:
-    radial-gradient(
-      circle at top,
-      #ffffff 0%,
-      #f2f2f2 60%,
-      #eaeaea 100%
-    );
+    radial-gradient(circle at top,#ffffff 0%,#f2f2f2 60%,#eaeaea 100%);
   color:var(--text);
 }
 
-/* ================== LAYOUT ================== */
 .page{
   min-height:100vh;
   display:flex;
@@ -73,21 +64,13 @@ body{
   gap:22px;
 }
 
-/* ================== HERO ================== */
 .hero{
   text-align:center;
   padding:34px 26px;
   border-radius:26px;
-  background:
-    linear-gradient(
-      180deg,
-      #ffffff,
-      #f3f3f3
-    );
+  background:linear-gradient(180deg,#ffffff,#f3f3f3);
   border:1px solid rgba(212,175,55,.35);
-  box-shadow:
-    0 12px 30px rgba(0,0,0,.08),
-    inset 0 0 20px rgba(255,255,255,.7);
+  box-shadow:0 12px 30px rgba(0,0,0,.08);
   animation:fadeUp .7s ease;
 }
 
@@ -95,12 +78,7 @@ body{
   font-size:1.85rem;
   font-weight:800;
   letter-spacing:2px;
-  background:linear-gradient(
-    120deg,
-    var(--gold),
-    var(--gold-soft),
-    var(--gold)
-  );
+  background:linear-gradient(120deg,var(--gold),var(--gold-soft),var(--gold));
   background-size:200% auto;
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
@@ -113,7 +91,6 @@ body{
   color:#666;
 }
 
-/* ================== SELO CONFIANÇA ================== */
 .trust{
   margin-top:14px;
   font-size:.75rem;
@@ -123,7 +100,6 @@ body{
   gap:10px;
 }
 
-/* ================== BOTÃO PRINCIPAL ================== */
 .primary-action{
   padding:18px;
   font-size:1.05rem;
@@ -134,26 +110,18 @@ body{
   border:none;
   box-shadow:0 10px 20px rgba(212,175,55,.35);
   animation:fadeUp .9s ease, pulseGlow 3s ease infinite;
-  transition:.25s;
 }
 
 .primary-action:active{
   transform:scale(.97);
-  box-shadow:0 6px 14px rgba(212,175,55,.35);
 }
 
-/* ================== AÇÕES SECUNDÁRIAS ================== */
 .secondary{
   display:flex;
   gap:12px;
   animation:fadeUp 1.1s ease;
 }
 
-.secondary .btn{
-  flex:1;
-}
-
-/* ================== FOOTER ================== */
 .footer{
   text-align:center;
   font-size:.75rem;
@@ -168,7 +136,6 @@ body{
 <div class="page">
   <div class="box">
 
-    <!-- HERO -->
     <div class="hero">
       <div class="hero-title">RF DRIVER</div>
       <div class="hero-sub">Mobilidade com excelência</div>
@@ -182,12 +149,10 @@ body{
       </div>
     </div>
 
-    <!-- AÇÃO PRINCIPAL -->
     <button class="btn primary-action" id="btnIniciar">
       ▶ Iniciar cálculo de corrida
     </button>
 
-    <!-- AÇÕES SECUNDÁRIAS -->
     <div class="secondary">
       <button class="btn btn-outline" onclick="abrirRegras()">
         📋 Regras
@@ -197,7 +162,6 @@ body{
       </a>
     </div>
 
-    <!-- FOOTER -->
     <div class="footer">
       Ferramenta oficial para motoristas RF Driver
     </div>
@@ -206,7 +170,21 @@ body{
 </div>
 
 <script src="core/global.js"></script>
+
 <script>
+// ================== CONTROLE DE ACESSO ==================
+const usuario = JSON.parse(localStorage.getItem("usuario"));
+const logado = localStorage.getItem("logado");
+
+if(!usuario || !logado){
+  window.location.href = "login.html";
+}
+
+if(usuario.tipo === "passageiro"){
+  window.location.href = "index-passageiro.html";
+}
+// ========================================================
+
 document.getElementById("btnIniciar").onclick = () => {
   App.reset();
   App.go("origem.html");
