Atualizar o resumo.html

--- a/resumo.html
+++ b/resumo.html
@@ -13,8 +13,8 @@
 :root{
   --gold:#D4AF37;
   --gold-soft:#E6C97A;
-  --bg:#F5F5F5;
-  --text:#222;
+  --bg:#F6F6F6;
+  --text:#333;
 }
 
 body{
@@ -37,6 +37,7 @@ body{
   gap:16px;
 }
 
+/* HEADER */
 .header{
   text-align:center;
   padding:20px;
@@ -46,29 +47,37 @@ body{
 }
 
 .header h1{
-  font-size:1.15rem;
-  letter-spacing:1px;
-  color:var(--gold);
+  font-size:1.2rem;
   font-weight:800;
+  color:var(--gold);
 }
 
-.route,
-.block{
+.header span{
+  font-size:.75rem;
+  color:#666;
+}
+
+/* ROTA */
+.route{
   background:#fff;
   border-radius:20px;
   padding:18px;
-  box-shadow:0 6px 18px rgba(0,0,0,.06);
-}
-
-.route{
   text-align:center;
-  font-weight:700;
+  box-shadow:0 6px 18px rgba(0,0,0,.06);
 }
 
 .arrow{
   margin:6px 0;
   color:var(--gold);
-  font-size:1.3rem;
+  font-size:1.4rem;
+}
+
+/* BLOCO */
+.block{
+  background:#fff;
+  border-radius:18px;
+  padding:16px;
+  box-shadow:0 6px 18px rgba(0,0,0,.06);
 }
 
 label{
@@ -78,17 +87,15 @@ label{
   margin-bottom:6px;
 }
 
-select,
-input[type="number"]{
+select,input[type="number"]{
   width:100%;
   padding:12px;
   border-radius:14px;
   border:1px solid #ccc;
-  background:#fff;
-  color:#000;
   font-size:.95rem;
 }
 
+/* EXTRAS */
 .extra{
   display:flex;
   justify-content:space-between;
@@ -104,6 +111,7 @@ input[type="number"]{
   border-color:var(--gold);
 }
 
+/* DETALHAMENTO */
 .details{
   font-size:.85rem;
 }
@@ -114,25 +122,13 @@ input[type="number"]{
   margin-bottom:6px;
 }
 
+/* TOTAL */
 .totalBox{
   text-align:center;
   padding:22px;
   border-radius:22px;
   background:#fff;
   box-shadow:0 10px 26px rgba(0,0,0,.1);
-  position:relative;
-}
-
-.badge{
-  position:absolute;
-  top:-10px;
-  right:12px;
-  background:linear-gradient(180deg,var(--gold-soft),var(--gold));
-  color:#000;
-  font-size:.65rem;
-  padding:6px 10px;
-  border-radius:12px;
-  font-weight:700;
 }
 
 .total{
@@ -141,22 +137,21 @@ input[type="number"]{
   color:var(--gold);
 }
 
-.btn{
+/* BOTÕES */
+.btn-primary{
   padding:16px;
   border-radius:18px;
   border:none;
-  font-size:1rem;
-  font-weight:800;
-}
-
-.btn-primary{
   background:linear-gradient(180deg,var(--gold-soft),var(--gold));
+  font-weight:800;
   color:#000;
 }
 
 .btn-secondary{
-  background:#fff;
+  padding:14px;
+  border-radius:16px;
   border:1px solid #ccc;
+  background:#fff;
 }
 </style>
 </head>
@@ -166,32 +161,42 @@ input[type="number"]{
 <div class="page">
 <div class="container">
 
+  <!-- HEADER -->
   <div class="header">
-    <h1>RF Driver – Recibo de viagem</h1>
+    <h1>RF Driver – Resumo da viagem</h1>
+    <span>Valor detalhado</span>
   </div>
 
+  <!-- ROTA -->
   <div class="route">
-    📌 <strong>Origem</strong><br><span id="origemTxt"></span>
+    <strong>📌 Origem</strong><br>
+    <span id="origemTxt"></span>
+
     <div class="arrow">⬇</div>
-    🏁 <strong>Destino</strong><br><span id="destinoTxt"></span>
+
+    <strong>🏁 Destino</strong><br>
+    <span id="destinoTxt"></span>
   </div>
 
+  <!-- TIPO -->
   <div class="block">
     <label>🚖 Tipo de viagem</label>
     <select id="tipoViagem">
       <option value="ida">🚕 Ida</option>
-      <option value="bate_volta">♻️ Bate e volta (+80%)</option>
+      <option value="bate_volta">♻️ Bate e volta</option>
       <option value="ida_volta">🚕♻️ Ida e volta</option>
-      <option value="ida_volta_espera">🚕♻️ Ida e volta (com espera)</option>
+      <option value="ida_volta_espera">🚕♻️ Ida e volta com espera</option>
     </select>
   </div>
 
+  <!-- TAXAS -->
   <div class="block">
     <div class="extra"><span>🛣️ Desvio simples</span><input type="checkbox" id="desvioSimples"></div>
     <div class="extra"><span>🏖️ Volta da praia</span><input type="checkbox" id="voltaPraia"></div>
     <div class="extra"><span>🧺 Taxa de feira</span><input type="checkbox" id="taxaFeira"></div>
   </div>
 
+  <!-- ANIMAL -->
   <div class="block">
     <label>🐶 Transporte de animal</label>
     <select id="animal">
@@ -203,23 +208,26 @@ input[type="number"]{
     </select>
   </div>
 
+  <!-- ESPERA -->
   <div class="block">
     <label>⏱️ Tempo de espera (min)</label>
     <input type="number" id="minutosEspera" placeholder="Ex: 10">
   </div>
 
+  <!-- DETALHAMENTO -->
   <div class="block">
     <strong>Detalhamento</strong>
     <div class="details" id="detalhamento"></div>
   </div>
 
+  <!-- TOTAL -->
   <div class="totalBox">
-    <div class="badge">OFICIAL</div>
     <div class="total" id="total">R$ 0,00</div>
   </div>
 
-  <button class="btn btn-primary" onclick="enviarWhats()">📲 Enviar no WhatsApp</button>
-  <button class="btn btn-secondary" onclick="App.go('destino.html')">⬅ Voltar</button>
+  <!-- BOTÕES -->
+  <button class="btn-primary" id="btnWhats">📲 Enviar no WhatsApp</button>
+  <button class="btn-secondary" onclick="App.go('destino.html')">⬅ Voltar</button>
 
 </div>
 </div>
@@ -229,12 +237,28 @@ input[type="number"]{
 <script src="core/dinamico.js"></script>
 
 <script>
+const perfil = App.get("perfil") || "passageiro";
+
 const origem = App.get("origem");
 const destino = App.get("destino");
 const valorBase = Number(App.get("valorBase") || 0);
 
-origemTxt.innerText = origem;
-destinoTxt.innerText = destino;
+document.getElementById("origemTxt").innerText = origem;
+document.getElementById("destinoTxt").innerText = destino;
+
+const tipoViagem = document.getElementById("tipoViagem");
+const desvioSimples = document.getElementById("desvioSimples");
+const voltaPraia = document.getElementById("voltaPraia");
+const taxaFeira = document.getElementById("taxaFeira");
+const animalSel = document.getElementById("animal");
+const minutosEspera = document.getElementById("minutosEspera");
+const detalheDiv = document.getElementById("detalhamento");
+const totalDiv = document.getElementById("total");
+const btnWhats = document.getElementById("btnWhats");
+
+if(perfil !== "motorista"){
+  btnWhats.style.display = "none";
+}
 
 let detalhesWhats = [];
 
@@ -246,7 +270,7 @@ function calcular(){
   detalhes.push(["🚖 Viagem base", valorBase]);
   detalhesWhats.push(`🚖 *Viagem base*: R$ ${valorBase.toFixed(2)}`);
 
-  if (Dinamico?.ativo) {
+  if(Dinamico?.ativo){
     const acres = valorBase * (Dinamico.multiplicador - 1);
     total += acres;
     detalhes.push(["⚡ Tarifa dinâmica", acres]);
@@ -255,64 +279,70 @@ function calcular(){
 
   const tipo = tipoViagem.value;
 
-  if (tipo === "bate_volta") {
+  if(tipo === "bate_volta"){
     const acres = valorBase * 0.8;
     total += acres;
     detalhes.push(["♻️ Bate e volta", acres]);
     detalhesWhats.push(`♻️ *Bate e volta*: +R$ ${acres.toFixed(2)}`);
   }
 
-  if (tipo === "ida_volta") {
-    total += valorBase;
-    detalhes.push(["🚕 Ida e volta", valorBase]);
-    detalhesWhats.push(`🚕 *Ida e volta*: +R$ ${valorBase.toFixed(2)}`);
+  if(tipo === "ida_volta"){
+    const acres = valorBase;
+    total += acres;
+    detalhes.push(["🚕 Ida e volta", acres]);
+    detalhesWhats.push(`🚕 *Ida e volta*: +R$ ${acres.toFixed(2)}`);
   }
 
-  if (tipo === "ida_volta_espera") {
+  if(tipo === "ida_volta_espera"){
     const idaVolta = valorBase * 2;
     const acres = idaVolta * 0.10;
-    total += valorBase + acres;
-    detalhes.push(["🚕 Ida e volta", valorBase]);
-    detalhes.push(["⏳ Espera (10%)", acres]);
-    detalhesWhats.push(`🚕 *Ida e volta*: +R$ ${valorBase.toFixed(2)}`);
+    total += (idaVolta - valorBase) + acres;
+
+    detalhes.push(["🚕 Ida e volta", idaVolta - valorBase]);
+    detalhes.push(["⏳ Acréscimo de espera (10%)", acres]);
+
+    detalhesWhats.push(`🚕 *Ida e volta*: +R$ ${(idaVolta - valorBase).toFixed(2)}`);
     detalhesWhats.push(`⏳ *Espera (10%)*: +R$ ${acres.toFixed(2)}`);
   }
 
-  if (desvioSimples.checked){
+  if(desvioSimples.checked){
     total += Taxas.desvioRotaSimples;
     detalhes.push(["🛣️ Desvio simples", Taxas.desvioRotaSimples]);
     detalhesWhats.push("🛣️ *Desvio simples*: +R$ 5,00");
   }
 
-  if (voltaPraia.checked){
+  if(voltaPraia.checked){
     total += Taxas.voltaPraia;
     detalhes.push(["🏖️ Volta da praia", Taxas.voltaPraia]);
     detalhesWhats.push("🏖️ *Volta da praia*: +R$ 10,00");
   }
 
-  if (taxaFeira.checked){
+  if(taxaFeira.checked){
     total += Taxas.feira;
     detalhes.push(["🧺 Taxa de feira", Taxas.feira]);
     detalhesWhats.push("🧺 *Taxa de feira*: +R$ 5,00");
   }
 
-  const animal = Number(animalSel.value||0);
-  if (animal>0){
+  const animal = Number(animalSel.value || 0);
+  if(animal > 0){
     total += animal;
     detalhes.push(["🐶 Transporte animal", animal]);
     detalhesWhats.push(`🐶 *Transporte animal*: +R$ ${animal.toFixed(2)}`);
   }
 
-  const min = Number(minutosEspera.value||0);
-  if (min>=Taxas.espera.blocoMinutos){
-    const acres = Math.floor(min/Taxas.espera.blocoMinutos)*Taxas.espera.valorPorBloco;
+  const min = Number(minutosEspera.value || 0);
+  if(min >= Taxas.espera.blocoMinutos){
+    const acres = Math.floor(min / Taxas.espera.blocoMinutos) * Taxas.espera.valorPorBloco;
     total += acres;
-    detalhes.push([`⏱️ Tempo de espera`, acres]);
+    detalhes.push([`⏱️ Tempo de espera (${min} min)`, acres]);
     detalhesWhats.push(`⏱️ *Tempo de espera*: +R$ ${acres.toFixed(2)}`);
   }
 
-  detalhamento.innerHTML = detalhes.map(d=>`
-    <div><span>${d[0]}</span><strong>R$ ${d[1].toFixed(2)}</strong></div>
+  detalheDiv.innerHTML = detalhes.map(d=>`
+    <div>
+      <span><strong>${d[0]}</strong></span>
+      <strong>R$ ${d[1].toFixed(2)}</strong>
+    </div>
   `).join("");
 
   totalDiv.innerText = `R$ ${total.toFixed(2)}`;
@@ -321,15 +351,15 @@ function calcular(){
 
 document.querySelectorAll("select,input").forEach(el=>{
   el.addEventListener("change",()=>{
-    el.closest(".extra")?.classList.toggle("active",el.checked);
+    el.closest(".extra")?.classList.toggle("active", el.checked);
     calcular();
   });
 });
 
 calcular();
 
-function enviarWhats(){
-const msg =
+btnWhats.onclick = () => {
+  const msg =
 `🚖 *RF Driver – Recibo de viagem*
 
 📌 *Origem*: ${origem}
@@ -340,8 +370,8 @@ ${detalhesWhats.join("\n")}
 
 💰 *Total*: R$ ${App.get("total").toFixed(2)}`;
 
-window.open("https://wa.me/?text="+encodeURIComponent(msg),"_blank");
-}
+  window.open("https://wa.me/?text="+encodeURIComponent(msg),"_blank");
+};
 </script>
 
 </body>
